[workspace]
members = [
    "bluejay-core",
    "bluejay-parser",
    "bluejay-printer",
    "bluejay-schema-comparator",
    "bluejay-typegen",
    "bluejay-typegen-macro",
    "bluejay-validator",
    "bluejay-visibility",
]
resolver = "2"

[workspace.lints.clippy]
wildcard_imports = "deny"

[profile.shopify-function]
inherits = "release"
lto = true
opt-level = 's'
strip = true
