[workspace]
members = [
    "bluejay-core",
    "bluejay-parser",
    "bluejay-printer",
    "bluejay-schema-comparator",
    "bluejay-typegen",
    "bluejay-typegen-codegen",
    "bluejay-typegen-macro",
    "bluejay-validator",
    "bluejay-visibility",
]
resolver = "2"

[workspace.package]
version = "0.3.0"

[workspace.lints.clippy]
wildcard_imports = "deny"

[workspace.dependencies]
bluejay-core = { path = "./bluejay-core", version = "=0.3.0" }
bluejay-parser = { path = "./bluejay-parser", version = "=0.3.0" }
bluejay-printer = { path = "./bluejay-printer", version = "=0.3.0" }
bluejay-schema-comparator = { path = "./bluejay-schema-comparator", version = "=0.3.0" }
bluejay-typegen = { path = "./bluejay-typegen", version = "=0.3.0" }
bluejay-typegen-codegen = { path = "./bluejay-typegen-codegen", version = "=0.3.0" }
bluejay-typegen-macro = { path = "./bluejay-typegen-macro", version = "=0.3.0" }
bluejay-validator = { path = "./bluejay-validator", version = "=0.3.0" }
bluejay-visibility = { path = "./bluejay-visibility", version = "=0.3.0" }

[profile.shopify-function]
inherits = "release"
lto = true
opt-level = 's'
strip = true
