[package]
name = "bluejay-core"
version = "0.1.0-alpha.5"
edition = "2021"
license = "MIT"
repository = "https://github.com/adampetro/bluejay"
homepage = "https://github.com/adampetro/bluejay"
keywords = ["graphql"]
exclude = [".gitignore"]
description = "Base GraphQL abstractions"

[dependencies]
strum = { version = "0.24", features = ["derive"] }
paste = "1.0"
serde_json = { version = "1.0", optional = true }
enum-as-inner = "0.6"

[features]
serde_json = ["dep:serde_json"]
