[package]
name = "bluejay-core"
version.workspace = true
edition = "2021"
license = "MIT"
repository = "https://github.com/Shopify/bluejay"
homepage = "https://github.com/Shopify/bluejay"
keywords = ["graphql"]
exclude = [".gitignore"]
description = "Base GraphQL abstractions"

[dependencies]
strum = { version = "0.28", features = ["derive"] }
serde_json = { version = "1.0", optional = true }
enum-as-inner = "0.7"
itertools = "0.14.0"

[features]
serde_json = ["dep:serde_json"]

[lints]
workspace = true
