[package]
name = "bluejay-parser"
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/Shopify/bluejay"
homepage = "https://github.com/Shopify/bluejay"
keywords = ["graphql"]
exclude = [".gitignore", "tests/**/*"]
description = "A GraphQL parser"

[dependencies]
logos = { version = "0.14" }
enum-as-inner = "0.6"
ariadne = { version = "0.4.1", optional = true }
bluejay-core = { version = "0.1.0", path = "../bluejay-core" }
strum = { version = "0.26", features = ["derive"] }

[dev-dependencies]
criterion = "0.5"
insta = { version = "1.28", features = ["glob"] }
self_cell = "1.0.3"

[[bench]]
name = "parse_github_schema"
harness = false

[features]
format-errors = ["dep:ariadne"]
