[package]
name = "bluejay-parser"
version.workspace = true
edition = "2021"
license = "MIT"
repository = "https://github.com/Shopify/bluejay"
homepage = "https://github.com/Shopify/bluejay"
keywords = ["graphql"]
exclude = [".gitignore", "tests/**/*"]
description = "A GraphQL parser"

[dependencies]
logos = { version = "0.15" }
enum-as-inner = "0.6"
ariadne = { version = "0.5.0" }
serde = { version = "1.0.203", optional = true }
bluejay-core = { workspace = true }
strum = { version = "0.26", features = ["derive"] }
itertools = "0.13.0"

[dev-dependencies]
criterion = "0.5"
insta = { version = "1.28", features = ["glob"] }
self_cell = "1.0.3"

[[bench]]
name = "parse"
harness = false

[features]
format-errors = []
serde = ["dep:serde"]

[lints]
workspace = true
