[package]
name = "bluejay-printer"
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/Shopify/bluejay"
homepage = "https://github.com/Shopify/bluejay"
keywords = ["graphql"]
exclude = [".gitignore", "*.graphql", "*.snap"]
description = "A GraphQL printer"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bluejay-core = { version = "0.1.0", path = "../bluejay-core" }

[dev-dependencies]
insta = { version = "1.28", features = ["glob"] }
similar-asserts = { version = "1.4" }
bluejay-parser = { path = "../bluejay-parser" }
