[package]
name = "bluejay-printer"
version.workspace = true
edition = "2021"
license = "MIT"
repository = "https://github.com/Shopify/bluejay"
homepage = "https://github.com/Shopify/bluejay"
keywords = ["graphql"]
exclude = [".gitignore", "*.graphql", "*.snap"]
description = "A GraphQL printer"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bluejay-core = { workspace = true }

[dev-dependencies]
insta = { version = "1.28", features = ["glob"] }
similar-asserts = { version = "1.4" }
bluejay-parser = { workspace = true }

[lints]
workspace = true
