[package]
name = "bluejay-schema-comparator"
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/adampetro/bluejay"
homepage = "https://github.com/adampetro/bluejay"
keywords = ["graphql"]
exclude = [".gitignore", "tests/**/*"]
description = "A GraphQL schema comparator"

[dependencies]
strum = { version = "0.26", features = ["derive"] }
bluejay-core = { version = "0.1.0", path = "../bluejay-core" }
bluejay-printer = { version = "0.1.0", path = "../bluejay-printer" }

[dev-dependencies]
bluejay-parser = { path = "../bluejay-parser" }
