[package]
name = "bluejay-schema-comparator"
version.workspace = true
edition = "2021"
license = "MIT"
repository = "https://github.com/Shopify/bluejay"
homepage = "https://github.com/Shopify/bluejay"
keywords = ["graphql"]
exclude = [".gitignore", "tests/**/*"]
description = "A GraphQL schema comparator"

[dependencies]
strum = { version = "0.27", features = ["derive"] }
bluejay-core = { workspace = true }
bluejay-printer = { workspace = true }

[dev-dependencies]
bluejay-parser = { workspace = true }

[lints]
workspace = true
