[package]
name = "bluejay-typegen-codegen"
version.workspace = true
edition = "2021"
license = "MIT"
repository = "https://github.com/Shopify/bluejay"
homepage = "https://github.com/Shopify/bluejay"
keywords = ["graphql"]
exclude = [".gitignore"]
description = "Codegen for `bluejay-typegen-macro`"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bluejay-core = { workspace = true }
bluejay-parser = { workspace = true, features = ["format-errors"] }
bluejay-validator = { workspace = true }
syn = { version = "2.0", features = ["full"] }
quote = "1.0"
proc-macro2 = "1.0"
convert_case = "0.6"
itertools = "0.13.0"

[features]
default = ["serde"]
serde = []
miniserde = []

[lints]
workspace = true
