[package]
name = "bluejay-typegen-codegen"
version.workspace = true
edition = "2021"
license = "MIT"
repository = "https://github.com/Shopify/bluejay"
homepage = "https://github.com/Shopify/bluejay"
keywords = ["graphql", "codegen"]
exclude = [".gitignore", "tests/**/*"]
description = "Code generation utilities for `bluejay-typegen-macro`"

[dependencies]
bluejay-core = { workspace = true }
bluejay-parser = { workspace = true, features = ["format-errors"] }
bluejay-validator = { workspace = true }
syn = { version = "2.0", features = ["full"] }
quote = "1.0"
proc-macro2 = "1.0"
convert_case = "0.10"
itertools = "0.14.0"

[lints]
workspace = true
