[package]
name = "bluejay-typegen-macro"
version = "0.1.0-alpha.5"
edition = "2021"
license = "MIT"
repository = "https://github.com/adampetro/bluejay"
homepage = "https://github.com/adampetro/bluejay"
keywords = ["graphql"]
exclude = [".gitignore", "tests/**/*"]
description = "Macros for `bluejay-typegen`"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bluejay-core = { version = "0.1.0-alpha.5", path = "../bluejay-core" }
bluejay-parser = { version = "0.1.0-alpha.5", path = "../bluejay-parser", features = ["format-errors"] }
bluejay-validator = { version = "0.1.0-alpha.5", path = "../bluejay-validator" }
syn = { version = "2.0", features = ["full"] }
quote = "1.0"
proc-macro2 = "1.0"
convert_case = "0.6"
itertools = "0.12.1"

[lib]
proc-macro = true

[features]
serde = []
miniserde = []
