[package]
name = "bluejay-typegen-macro"
version.workspace = true
edition = "2021"
license = "MIT"
repository = "https://github.com/Shopify/bluejay"
homepage = "https://github.com/Shopify/bluejay"
keywords = ["graphql"]
exclude = [".gitignore", "tests/**/*"]
description = "Macros for `bluejay-typegen`"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bluejay-core = { workspace = true }
bluejay-parser = { workspace = true, features = ["format-errors"] }
bluejay-validator = { workspace = true }
syn = { version = "2.0", features = ["full"] }
quote = "1.0"
proc-macro2 = "1.0"
convert_case = "0.7"
itertools = "0.14.0"

[lib]
proc-macro = true

[features]
default = ["serde"]
serde = []
miniserde = []

[lints]
workspace = true
