[package]
name = "bluejay-typegen-macro"
version.workspace = true
edition = "2021"
license = "MIT"
repository = "https://github.com/Shopify/bluejay"
homepage = "https://github.com/Shopify/bluejay"
keywords = ["graphql"]
exclude = [".gitignore", "tests/**/*"]
description = "Macros for `bluejay-typegen`"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bluejay-typegen-codegen = { workspace = true }
syn = { version = "2.0", features = ["full"] }
quote = "1.0"

[lib]
proc-macro = true

[features]
default = ["serde"]
serde = ["bluejay-typegen-codegen/serde"]
miniserde = ["bluejay-typegen-codegen/miniserde"]

[lints]
workspace = true
