[package]
name = "bluejay-typegen"
version = "0.1.0-alpha.5"
edition = "2021"
license = "MIT"
repository = "https://github.com/adampetro/bluejay"
homepage = "https://github.com/adampetro/bluejay"
keywords = ["graphql", "typegen"]
exclude = [".gitignore", "tests/**/*"]
description = "A GraphQL type generator"

[dependencies]
bluejay-typegen-macro = { version = "0.1.0-alpha.5", path = "../bluejay-typegen-macro" }
# rename these packages to prevent the tests from passing if the macro generates code
# referencing them directly instead of the re-exports
srd = { package = "serde", version = "1.0", features = ["derive"], optional = true }
mnsrd = { package = "miniserde", version = "0.1.39", optional = true }

[dev-dependencies]
serde_json = "1.0"
trybuild = "1.0"

[features]
default = ["serde"]
serde = ["dep:srd", "bluejay-typegen-macro/serde"]
miniserde = ["dep:mnsrd", "bluejay-typegen-macro/miniserde"]
