[package]
name = "bluejay-typegen"
version.workspace = true
edition = "2021"
license = "MIT"
repository = "https://github.com/Shopify/bluejay"
homepage = "https://github.com/Shopify/bluejay"
keywords = ["graphql", "typegen"]
exclude = [".gitignore", "tests/**/*"]
description = "A GraphQL type generator"

[dependencies]
bluejay-typegen-macro = { workspace = true, default-features = false }
# rename these packages to prevent the tests from passing if the macro generates code
# referencing them directly instead of the re-exports
srd = { package = "serde", version = "1.0", features = ["derive"] }

[dev-dependencies]
serde_json = "1.0"
trybuild = "1.0"

[lints]
workspace = true

[[example]]
name = "shopify_function"
path = "examples/shopify_function.rs"
