[package]
name = "bluejay-validator"
version.workspace = true
edition = "2021"
license = "MIT"
repository = "https://github.com/Shopify/bluejay"
homepage = "https://github.com/Shopify/bluejay"
keywords = ["graphql"]
exclude = [".gitignore", "tests/**/*"]
description = "A GraphQL validator"

[dependencies]
bluejay-core = { workspace = true }
bluejay-parser = { workspace = true, optional = true, features = ["format-errors"] }
paste = "1.0"
itertools = "0.14.0"
serde_json = { version = "1.0", optional = true }
seq-macro = "0.3.5"

[dev-dependencies]
bluejay-core = { workspace = true, features = ["serde_json"] }
criterion = "0.5"
insta = { version = "1.28", features = ["glob"] }
once_cell = "1.17"
serde_json = { version = "1.0" }

[features]
default = ["parser-integration", "one-of-input-objects", "serde_json"]
parser-integration = ["dep:bluejay-parser"]
one-of-input-objects = []
serde_json = ["dep:serde_json", "bluejay-core/serde_json"]

[[bench]]
name = "field_selection_merging"
harness = false

[lints]
workspace = true
