[package]
name = "bluejay-visibility"
version.workspace = true
edition = "2021"
license = "MIT"
repository = "https://github.com/Shopify/bluejay"
homepage = "https://github.com/Shopify/bluejay"
keywords = ["graphql"]
exclude = [".gitignore", "*.graphql", "*.snap"]
description = "A GraphQL schema wrapper for enforcing visibility"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bluejay-core = { workspace = true }
elsa = "1.8.1"
once_cell = "1.17"
enum-as-inner = "0.6"

[dev-dependencies]
insta = { version = "1.28" }
bluejay-parser = { workspace = true }
bluejay-printer = { workspace = true }

[lints]
workspace = true
